@@ -32,6 +32,32 @@
              storepass="apacheant" maxmemory="128m"/>
   </target>
 
+  <target name="preserveLastModified">
+    <jar jarfile="signtest.jar" basedir="${classes.dir}" includes="**/Task.class"/>
+    <touch file="signtest.jar" datetime="06/28/2000 2:02 pm"/>
+    <signjar jar="signtest.jar" alias="testonly" keystore="testkeystore" storepass="apacheant" 
+    	preservelastmodified="true"/>
+    <!-- Currently there is no condition for testing the date of file - so
+         use a selector -->
+    <pathconvert property="signtest.jar.prop" targetos="unix">
+      <path>
+        <fileset dir="." includes="signtest.jar">
+          <date datetime="06/28/2000 2:02 pm" when="equal"/>
+        </fileset>
+      </path>
+      <mapper>
+        <flattenmapper/>
+      </mapper>
+    </pathconvert>
+    <fail message="preserveLastModified did not preserve the last modified time">
+      <condition>
+        <not>
+          <equals arg1="signtest.jar" arg2="signtest.jar"/>
+        </not>
+      </condition>
+    </fail>
+  </target>
+
   <target name="clean">
     <delete file="signtest.jar"/>
   </target>
